[gd_scene load_steps=8 format=3 uid="uid://bqklwy88vautq"]

[ext_resource type="Script" path="res://scripts/intro.gd" id="1_n580y"]
[ext_resource type="Texture2D" uid="uid://bvhca36jeug4u" path="res://sprites/Background2.png" id="2_3jagy"]
[ext_resource type="Texture2D" uid="uid://hvpcvitq2udl" path="res://sprites/inga.png" id="3_ochr0"]
[ext_resource type="Texture2D" uid="uid://crq8fgppkg5er" path="res://sprites/shelly1.png" id="4_qedjd"]
[ext_resource type="Texture2D" uid="uid://dq05lwj84a6pa" path="res://sprites/vicky.png" id="5_fc0y1"]
[ext_resource type="PackedScene" uid="uid://dvs0nug5kbfdo" path="res://scenes/end.tscn" id="6_pyrab"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hntuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ochr0")
}],
"loop": true,
"name": &"Inga",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qedjd")
}],
"loop": true,
"name": &"Shelly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fc0y1")
}],
"loop": true,
"name": &"Vicky",
"speed": 5.0
}]

[node name="Intro" type="Node2D"]
z_index = 1
script = ExtResource("1_n580y")

[node name="LabSketch" type="Sprite2D" parent="."]
position = Vector2(544, 320)
texture = ExtResource("2_3jagy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 552.0
offset_right = 1080.0
offset_bottom = 608.0
color = Color(0.380392, 0.282353, 0.301961, 1)

[node name="Portrait" type="AnimatedSprite2D" parent="."]
position = Vector2(208, 296)
sprite_frames = SubResource("SpriteFrames_hntuh")
animation = &"Shelly"

[node name="TempSplash" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 392.0
offset_right = 1080.0
offset_bottom = 608.0
color = Color(0, 0, 0, 0.588235)

[node name="Nameplate" type="RichTextLabel" parent="."]
offset_left = 32.3136
offset_top = 564.314
offset_right = 192.314
offset_bottom = 612.314
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Name"
scroll_active = false

[node name="Story" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 208.0
offset_top = 416.0
offset_right = 1056.0
offset_bottom = 560.0
theme_override_constants/line_separation = 4
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "Story text goes here."

[node name="Skip" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 960.0
offset_top = 568.0
offset_right = 1056.0
offset_bottom = 599.0
focus_neighbor_left = NodePath("../Next")
text = "Skip Scene"

[node name="Next" type="Button" parent="."]
offset_left = 864.0
offset_top = 568.0
offset_right = 944.0
offset_bottom = 600.0
focus_neighbor_right = NodePath("../Skip")
text = "Next"

[node name="GameOverScreen" parent="." instance=ExtResource("6_pyrab")]
visible = false

[connection signal="button_down" from="Skip" to="." method="skip_down"]
[connection signal="pressed" from="Skip" to="." method="skip_press"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
